# SerialUI

./: INSTALL.txt  README.md  SUIMenu.cpp  SUIPlat_ArduinoSerial.cpp  SUIPlat_DigiUSB.cpp  SerialUI.cpp  SerialUI.h  keywords.txt  library.properties
src/: AuthSimple.cpp  AuthStorage.cpp  AuthStoragePython.cpp  AuthStorageStatic.cpp  AuthValidator.cpp  AuthValidatorEquality.cpp  AuthValidatorPython.cpp  Authenticator.cpp  BLESerial.cpp  CMakeLists.txt  ChannelManager.cpp  CommChannel.cpp  CommChannelArdStd.cpp  CommChannelSerial.cpp  CommRequest.cpp  CommSink.cpp  CommSource.cpp  Command.cpp  DeSerializer.cpp  DeSerializerJson.cpp  Delegate.cpp  DelegateDummy.cpp  DelegateNRF51822.cpp  DynCharBuffer.cpp  ExternalModule.cpp  ExternalPython.cpp  ItemCommand.cpp  ItemDynamicText.cpp  ItemList.cpp  ItemReqBoolean.cpp  ItemReqBoundedLong.cpp  ItemReqCharacter.cpp  ItemReqDateTime.cpp  ItemReqEvent.cpp  ItemReqFloat.cpp  ItemReqLong.cpp  ItemReqOptions.cpp  ItemReqString.cpp  ItemReqTime.cpp  ItemReqUnsignedLong.cpp  (+40 more)
src/includes/: GrowableList.h  Menu.h  MenuItem.h  RingBuffer.h  SUIConfig.h  SUIExtIncludes.h  SUIGlobals.h  SUIMenu.h  SUIPlatform.h  SUIState.h  SUIStateTracking.h  SUIStream.h  SUIStrings.h  SUIStrings_en.h  SUITypes.h  SerialUI.h  SerialUIConfig.h  SerialUIExtIncludes.h  SerialUIPlatform.h  SerialUIStrings.h  SerialUITypes.h
src/includes/auth/: AuthSimple.h  AuthStorage.h  AuthStoragePython.h  AuthStorageStatic.h  AuthTypes.h  AuthValidator.h  AuthValidatorEquality.h  AuthValidatorPython.h  Authenticator.h
src/includes/comm/: ChannelManager.h  CommChannel.h  CommChannelArdStd.h  CommChannelSerial.h  CommFieldBoundaries.h  CommRequest.h  CommSink.h  CommSource.h  channels.h
src/includes/menu/: MenuStructure.h  Tracking.h
src/includes/menuitem/: Command.h  ItemCommand.h  ItemDynamicText.h  ItemList.h  ItemRequest.h  ItemText.h  ItemTrackedView.h  MenuItem.h  Request.h  SubGroup.h  SubMenu.h  items.h
src/includes/platform/: ArduinoAVR.h  ArduinoSAM.h  ArduinoSerial.h  ArduinoStandard.h  DefaultStream.h  Desktop.h  DigiUSB.h  ESP8266.h  PlatformExtIncludes.h  RBL_nRF51822.h  SUIPlatArduino.h  SUIPlatLinux.h  SUIPlatNRF52Arduino.h  SUIWString.h
src/includes/python/: ExternalModule.h  ExternalPython.h  pyhelper.hpp
src/includes/settings/: DeSerializer.h  DeSerializerJson.h  Serializer.h  SerializerJson.h  StateStorage.h
src/includes/sova/: SovA.h  SovAConfig.h  SovAExtIncludes.h  SovAPlatform.h  SovATypes.h
src/includes/stream/: Delegate.h  (+4 more)
(+113 files in other folders)
